1.Updated team information 2.Added Robocup info page

--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
             <ul>
               <li>BITS Quark 2024</li>
               <li>Technoxian - World Robotics Championship 2024 </li>
-              <li>Robocup 2024</li>
+              <a href="Robocup2024.html" style="text-decoration: none;">
+                <li>Robocup 2024</li>
+              </a>
               <li>Kavach 2024</li>
               <li>Smart India Hackathon 2023</li>
             </ul>
@@ -287,15 +289,11 @@
           </div> <span>roboticsandcircuits.mit@gmail.com</span> <br><br>
           <div class="contact_icon">
             <i class="fa fa-phone" aria-hidden="true"></i>
-            <span> +91-63055 04048</span>
+            <span> +91-89100 97055</span>
           </div>
           <div class="contact_icon">
             <i class="fa fa-phone" aria-hidden="true"></i>
-            <span> +91-63055 04048</span>
-          </div>
-          <div class="contact_icon">
-            <i class="fa fa-phone" aria-hidden="true"></i>
-            <span> +91-63055 04048</span>
+            <span> +91-70445 30034</span>
           </div>
         </div>
       </div>
