--- a/project_gallery.html
+++ b/project_gallery.html
@@ -70,7 +70,7 @@
             <pre> </pre>Smart Helmet
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/nK6iBMrzzYU" frameborder="0"
+          <iframe width="560" height="315" src="" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
@@ -84,7 +84,7 @@
             <pre> </pre>Smart Dustbin
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/_UE4mIwjAAE" frameborder="0"
+          <iframe width="560" height="315" src="" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
@@ -98,7 +98,7 @@
             <pre> </pre>Gait-Analaysis
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/5nTD0bgLb4k" frameborder="0"
+          <iframe width="560" height="315" src="" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
@@ -112,7 +112,7 @@
             <pre> </pre>Pipe Inspection Bot
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/5nTD0bgLb4k" frameborder="0"
+          <iframe width="560" height="315" src="" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
