--- a/team.html
+++ b/team.html
@@ -66,9 +66,11 @@
     </div>
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/chaitanya.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/ayush.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href=""><i class="fa fa-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/ayush-sarkar-851946227?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+              class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <h3>Ayush</h3>
@@ -80,9 +82,9 @@
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/siddhartha.jpeg">
+        <img src="images/team/2023-24/ahona.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252/"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <h3>Ahona</h3>
@@ -92,9 +94,9 @@
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/chaitanya.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/disha_gupta.JPG" style="object-fit: cover;">
         <div class="social_media">
-          <a href=""><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/disha-gupta-604624240"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <h3>Disha</h3>
@@ -108,9 +110,9 @@
   <section class="board">
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/disha.jpg" style="object-fit: cover;">
+        <img src="images/team/2023-24/nilay.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/nilay-nishant-796795272/"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <h3>Nilay </h3>
@@ -120,9 +122,11 @@
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/ayush.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/isha.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/isha-uttam-81b48422a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i
+              class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <h3>Isha</h3>
@@ -132,9 +136,9 @@
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/ahona.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/electronics_head.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/poonguzhali-sivakumar-b8964a238"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <h3>Poonguzhali</h3>
@@ -179,7 +183,9 @@
       <div class="member_img">
         <img src="images/team/2023-24/Kashin.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/kashin-mittal-342bb621a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fa fa-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/kashin-mittal-342bb621a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i
+              class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <h3>Kashin</h3>
@@ -187,45 +193,70 @@
         Mittal
       </h3>
     </div>
+    <div class="member">
+      <div class="member_img">
+        <img src="images/team/2023-24/disha_agarwal.jpg" style="object-fit: cover;">
+        <div class="social_media">
+          <a
+            href="https://www.linkedin.com/in/disha-agarwal-1b71651b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+              class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
+      <h3>Disha</h3>
+      <h3>
+        Agarwal
+      </h3>
+    </div>
   </section>
 
   <section class="board">
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/disha.jpg" style="object-fit: cover;">
+        <img src="images/team/2023-24/yashika_goyal.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yashika-goyal-872400248"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
-      <h3>Nilay </h3>
-      <h3>Nishant</h3>
-      <h5>Coding & Simulations Head</h5>
+      <h3>Yashika</h3>
+      <h3>Goyal</h3>
     </div>
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/ayush.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/jason.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/jason-dmello-598070233/"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
-      <h3>Isha</h3>
-      <h3>Uttam</h3>
-      <h5>Management Head</h5>
+      <h3>Jason</h3>
+      <h3>Dmello</h3>
     </div>
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/ahona.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/purbasha.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/purbasha-rauth-1045242b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+              class="fa fa-linkedin"></i></a>
         </div>
       </div>
-      <h3>Poonguzhali</h3>
-      <h3>Sivakumar</h3>
-      <h5>Electronics Head</h5>
+      <h3>Purbasha</h3>
+      <h3>Rauth</h3>
     </div>
 
+    <div class="member">
+      <div class="member_img">
+        <img src="images/team/2023-24/avyaktha.jpg" style="object-fit: cover;">
+        <div class="social_media">
+          <a href="https://www.linkedin.com/in/avyaktha-thantry-bb992725b/"><i class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
+      <h3>Avyaktha</h3>
+      <h3>
+        Thantry
+      </h3>
+    </div>
 
   </section>
 
@@ -242,8 +273,6 @@
         <div class="domains">
           <h5>Coding & Simulation</h5>
           <ul>
-            <li>Yashika Goyal</li>
-            <li>Jason Dmello</li>
             <li>Soham Ghodke</li>
             <li>Anirudh Agrawal</li>
             <li>Aman Agarwal</li>
@@ -258,16 +287,12 @@
         <div class="domains">
           <h5>Electronics</h5>
           <ul>
-            <li>Harshitha Ashok</li>
-            <li>Avyaktha Thantry</li>
-            <li>Purbasha Rauth</li>
-            <li>Kashin Mittal</li>
+            <li>Akshay Prabhu</li>
             <li>Urvi Todi</li>
             <li>Daya Sagar A.J</li>
             <li>Pradyumna Rao</li>
             <li>Mudit Agarwal</li>
             <li>Mohal Sarthak</li>
-            <li>Akshay Prabhu</li>
           </ul>
         </div>
 
