--- a/Robocup2024.html
+++ b/Robocup2024.html
@@ -53,18 +53,36 @@
                 <div class="headingcontent">
                     <div class="block">
                         <h4>Welcome to</h4>
-                        <h1>Robocup 2024</h1>
+                        <h1>Robocup@work</h1>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!--end blog title-->
+    
     <!--Start info here-->
-    <section class="main_content" id="info_section">
-        <div class="info_space">
-            <h1>Coming Soon....</h1>
-        </div>
+    <section class="home" id="info_section">
+        <div class="container"><div class="info_space">
+            <h1>Robocup@work</h1>
+            <hr/>
+            <p>
+                RoboCup@Work is a relatively new competition in RoboCup that targets the use of robots in work-related scenarios.
+
+It aims to foster research and development that enables the use of innovative mobile robots equipped with advanced manipulators and sensors for current and future industrial applications, where robots cooperate with human workers for complex tasks ranging from manufacturing, automation, and parts handling up to general logistics. 
+            </p>
+            <h1>
+                2024
+            </h1>
+            <hr/>
+            <p>
+                The robocup@work 2024 is going to take placein Eindhoven, The Netherlands from July 15th to July 22nd, 2024. With help of pur Senior team, the Bot called M.U.C came into life. The MUC represents the convergence of cutting-edge robotics, intelligent control systems, and versatile design principles, offering a comprehensive solution for a wide range of warehouse automation tasks. From inventory management and order fulfillment to material handling and transportation, the MUC serves as a flexible foundation upon which tailored automation solutions can be built.
+
+            </p>
+            <video>
+
+            </video>
+        </div></div>
     </section>
     <!--end info here-->
     <!--start footer-->
