--- a/project_gallery.html
+++ b/project_gallery.html
@@ -778,23 +778,21 @@
   <!--start footer-->
   <footer>
     <div class="container">
-      <div class="row">
-        <div class="logo">
-          <img src="images/logo/flogo.png" height=70px>
-        </div>
+     <div class="row">
+      <div class="logo">
+        <img src="images/logo/flogo.png" height=70px>
       </div>
-      <div class="row">
-        <div class="social">
-          <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
-          <a class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i
-              class="fa fa-instagram"></i></a>
-          <a class="sm_icons" href="https://www.linkedin.com/company/robotics-and-circuits"><i
-              class="fa fa-linkedin"></i></a>
-          <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
-        </div>
+    </div>
+    <div class="row">
+      <div class="social">
+        <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
+        <a  class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i class="fa fa-instagram"></i></a>
+        <a class="sm_icons" href="https://www.instagram.com/rnc_manipal?igsh=Y3NlcTluczlrN3U2"><i class="fa fa-linkedin"></i></a>
+        <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
       </div>
+    </div>
       <p>&copy; 2021 Robotics and Circuits</p>
-  </footer>
+    </footer>
 
   <div class="mahe">
     <p>supported by</p>
