--- a/alumni.html
+++ b/alumni.html
@@ -510,7 +510,7 @@
   <div class="social">
     <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
     <a  class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i class="fa fa-instagram"></i></a>
-    <a class="sm_icons" href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
+    <a class="sm_icons" href="https://www.instagram.com/rnc_manipal?igsh=Y3NlcTluczlrN3U2"><i class="fa fa-linkedin"></i></a>
     <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
   </div>
 </div>
