--- a/index.html
+++ b/index.html
@@ -305,26 +305,21 @@
   <!--start footer-->
   <footer>
     <div class="container">
-      <div class="row">
-        <div class="logo">
-          <img src="images/logo/flogo.png" height=70px>
-        </div>
+     <div class="row">
+      <div class="logo">
+        <img src="images/logo/flogo.png" height=70px>
       </div>
-      <div class="row">
-        <div class="social">
-          <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
-          <a class="sm_icons" href="https://www.instagram.com/rnc_manipal/"> <i class="fa fa-instagram"></i></a>
-          <a class="sm_icons" href="https://www.linkedin.com/company/robotics-and-circuits"><i
-              class="fa fa-linkedin"></i></a>
-          <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
-        </div>
+    </div>
+    <div class="row">
+      <div class="social">
+        <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
+        <a  class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i class="fa fa-instagram"></i></a>
+        <a class="sm_icons" href="https://www.instagram.com/rnc_manipal?igsh=Y3NlcTluczlrN3U2"><i class="fa fa-linkedin"></i></a>
+        <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
       </div>
-      <p>&copy; 2024 Robotics and Circuits</p>
-      <div class="mahe">
-        <p>supported by</p>
-        <img src="images/logo/mahe-logo.png" height=50px>
-      </div>
-  </footer>
+    </div>
+      <p>&copy; 2021 Robotics and Circuits</p>
+    </footer>
 
   <section class="name">
     <p>Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by Titiksha Wagh</p>
