added the team_video

--- a/Robocup2024.html
+++ b/Robocup2024.html
@@ -67,21 +67,27 @@
             <h1>Robocup@work</h1>
             <hr/>
             <p>
-                RoboCup@Work is a relatively new competition in RoboCup that targets the use of robots in work-related scenarios.
-
-It aims to foster research and development that enables the use of innovative mobile robots equipped with advanced manipulators and sensors for current and future industrial applications, where robots cooperate with human workers for complex tasks ranging from manufacturing, automation, and parts handling up to general logistics. 
+                The RoboCup Industrial @ Work League is a competition in RoboCup that targets the use of robots in industrial work-related scenarios. It aims to foster research and development that enables the use of innovative mobile robots equipped with advanced manipulators and sensors for current and future industrial applications, where robots cooperate with human workers for complex tasks involving automation, thus minimising manual labour.
+ 
             </p>
             <h1>
                 2024
             </h1>
             <hr/>
             <p>
-                The robocup@work 2024 is going to take placein Eindhoven, The Netherlands from July 15th to July 22nd, 2024. With help of pur Senior team, the Bot called M.U.C came into life. The MUC represents the convergence of cutting-edge robotics, intelligent control systems, and versatile design principles, offering a comprehensive solution for a wide range of warehouse automation tasks. From inventory management and order fulfillment to material handling and transportation, the MUC serves as a flexible foundation upon which tailored automation solutions can be built.
+                
+The RoboCup @ Work 2024 is going to take place in Eindhoven, The Netherlands from July 15th to July 22nd, 2024. Team RnC presents to you: The Multipurpose Universal Chassis (M.U.C.), offering a comprehensive solution for a wide range of warehouse automation tasks. From inventory management to transportation, the M.U.C. uses the principles of autonomous navigation, perception, manipulation and serves as a flexible foundation upon which tailored automation solutions can be built.
+
 
             </p>
-            <video>
+            <h2>
+                Presenting you, Team RnC from MIT Manipal, India!
+            </h2>
+            <iframe width="315" height="315" src="https://www.youtube.com/watch?v=cKZTDuRBZS8&ab_channel=RoboticsandCircuits%3AMITManipal" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
 
-            </video>
+
         </div></div>
     </section>
     <!--end info here-->
