--- a/Robocup2024.html
+++ b/Robocup2024.html
@@ -80,10 +80,9 @@
             <h2>
                 Presenting you, Team RnC from MIT Manipal, India!
             </h2>
-            <iframe width="315" height="315" src="https://www.youtube.com/watch?v=cKZTDuRBZS8&ab_channel=RoboticsandCircuits%3AMITManipal" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cKZTDuRBZS8?si=phTdWONLoHzklTUU&amp;controls=0" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-
 
         </div></div>
     </section>
