--- a/Robocup2024.html
+++ b/Robocup2024.html
@@ -28,7 +28,7 @@
                                 <li><a href="index.html#about_us">About Us</a></li>
                                 <li><a href="index.html#our_work">Our Work</a></li>
                                 <li><a href="index.html#ongoing">Ongoing Activities</a></li>
-                                <li><a href="vedanthcs.html">Vedanth</a></li>
+                                <li><a href="coming_soon.html">Vedanth</a></li>
                                 <li class="dropdown">
                                     <a href="team.html">Team</a>
                                     <div class="dropdown-content">
@@ -148,7 +148,7 @@
                     <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
                 </div>
             </div>
-            <p>&copy; 2021 Robotics and Circuits</p>
+            <p>&copy; 2024 Robotics and Circuits</p>
     </footer>
 
     <div class="mahe">
@@ -157,6 +157,8 @@
     </div>
 
     <section class="name">
+        <p>Maintained by Coding Team RnC</p>
+    <P>Last updated- 05-06-2024</P>
         <p> Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by Titiksha Wagh</p>
     </section> 
 
