--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="#about_us">About Us</a></li>
             <li><a href="#our_work">Our Work</a></li>
             <li><a href="#ongoing">Ongoing Activities</a></li>
-            <li><a href="vedanthcs.html">Vedanth</a></li>
+            <li><a href="coming_soon.html">Vedanth</a></li>
             <li class="dropdown">
               <a href="team.html">Team</a>
               <div class="dropdown-content">
@@ -119,13 +119,13 @@
       </div>
       <div class="visioncontent">
         <div data-aos="fade-right">
-          <h2><img src="images/home/experience.png">EXPERIENCE.</h2>
+          <h2><img src="images/home/experience.png"> EXPERIENCE.</h2>
           <div class="box1">
             <p> To impart hands-on experience to students, in a manner that complements their coursework.</p>
           </div>
         </div>
         <div data-aos="fade-left">
-          <h2 class="right"><img src="images/home/explore.png">EXPLORE.</h2>
+          <h2 class="right"><img src="images/home/explore.png"> EXPLORE.</h2>
           <div class="box2">
             <p> To encourage exploration of various fields for the development of an interdisciplinary skillset.</p>
           </div>
@@ -146,8 +146,8 @@
     <div class="container">
       <div class="quotecontent">
         <div class="row">
-          <p><i>“Failure is an option here.<br>If things are not failing, you are not innovating enough.”</i><br>
-            <span>- ELON MUSK </span>
+          <p><i>“HUMAN HISTORY IN ESSENCE IS THE HISTORY OF IDEAS”</i><br>
+            <span>- HG WELLS </span>
           </p>
         </div>
       </div>
@@ -232,13 +232,11 @@
         <div class="activitiescontent">
           <div class="box">
             <ul>
-              <li>BITS Quark 2024</li>
               <li>Technoxian - World Robotics Championship 2024 </li>
               <a href="Robocup2024.html" style="text-decoration: none;">
                 <li>Robocup 2024</li>
               </a>
-              <li>Kavach 2024</li>
-              <li>Smart India Hackathon 2023</li>
+              <li>Samsung - Code for Tommorrow</li>
             </ul>
           </div>
         </div>
@@ -318,10 +316,12 @@
         <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
       </div>
     </div>
-      <p>&copy; 2021 Robotics and Circuits</p>
+      <p>&copy; 2024 Robotics and Circuits</p>
     </footer>
 
   <section class="name">
+    <p>Maintained by Coding Team RnC</p>
+    <P>Last updated- 05-06-2024</P>
     <p>Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by Titiksha Wagh</p>
   </section>
 
