--- a/project_gallery.html
+++ b/project_gallery.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html#about_us">About Us</a></li>
                 <li><a href="index.html#our_work">Our Work</a></li>
                 <li><a href="index.html#ongoing">Ongoing Activities</a></li>
-                <li><a href="vedanthcs.html">Vedanth</a></li>
+                <li><a href="coming_soon.html">Vedanth</a></li>
                 <li class="dropdown">
                   <a href="team.html">Team</a>
                   <div class="dropdown-content">
@@ -65,56 +65,63 @@
     <div class="container">
       <div class="gallerycontent">
 
-        <div class="item" id="20211">
+        <div class="item" id="20241">
+          <h2 class="animated bounceInLeft delay-4s">
+            <pre> </pre>M.U.C
+          </h2>
+          <p> </p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/bgFyJudC_60?si=8IYn3bPeO4vSSSti" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <p class=" vp animated bounceInLeft delay-4s">Research project</p>
+          <div class="vbutton animated bounceIn delay-5s">
+            Read More
+          </div>
+
+        </div>
+
+        <div class="item" id="20242">
           <h2 class="animated bounceInLeft delay-4s">
             <pre> </pre>Smart Helmet
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <img width="560" height="315" src="images/projects/helmet.jpg" frameborder="0">
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
           <div class="vbutton animated bounceIn delay-5s">
             Read More
           </div>
 
         </div>
-        <div class="item" id="20212">
+        <div class="item" id="20243">
           <h2 class="animated bounceInLeft delay-4s">
             <pre> </pre>Smart Dustbin
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <img width="560" height="315" src="images/projects/dustbin.jpg" frameborder="0">
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
           <div class="vbutton animated bounceIn delay-5s">
             Read More
           </div>
         </div>
 
-        <div class="item" id="20213">
+        <div class="item" id="20244">
           <h2 class="animated bounceInLeft delay-4s">
             <pre> </pre>Gait-Analaysis
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <img width="560" height="315" src="images/projects/gait.jpg" frameborder="0">
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
           <div class="vbutton animated bounceIn delay-5s">
             Read More
           </div>
         </div>
 
-        <div class="item" id="20213">
+        <div class="item" id="20245">
           <h2 class="animated bounceInLeft delay-4s">
             <pre> </pre>Pipe Inspection Bot
           </h2>
           <p> </p>
-          <iframe width="560" height="315" src="" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <img width="560" height="315" src="images/projects/pipe_inspect.jpg" frameborder="0">
           <p class=" vp animated bounceInLeft delay-4s">Vedanth 14.0</p>
           <div class="vbutton animated bounceIn delay-5s">
             Read More
@@ -299,22 +306,22 @@
         <!--Note: Aspect ratio of all images must be 3:2-->
 
         <!--Line Follower-->
-        <div class="item" id="60">
-          <img src="images/projects/img60.jpg">
+        <div class="item" id="20246">
+          <img src="images/projects/Line-Follower.png">
           <h2>Line Follower Bot</h2>
           <div class="text">
-            <p>Vedanth 9.0</p>
+            <p>Technoxian Bot</p>
           </div>
           <div class="button">Learn More</div>
         </div>
 
 
         <!--Cosmo CLench-->
-        <div class="item" id="60">
-          <img src="images/projects/img60.jpg">
+        <div class="item" id="20247">
+          <img src="images/projects/Cosmoclench.png">
           <h2>Cosmo Clench Bot</h2>
           <div class="text">
-            <p>Vedanth 9.0</p>
+            <p>Technoxian bot</p>
           </div>
           <div class="button">Learn More</div>
         </div>
@@ -322,22 +329,14 @@
 
 
         <!--Micro Mouse-->
-        <div class="item" id="60">
-          <img src="images/projects/img60.jpg">
+        <div class="item" id="20248">
+          <img src="images/projects/Micro-mouse.png">
           <h2>Micro-Mouse</h2>
           <div class="text">
-            <p>Vedanth 9.0</p>
+            <p>Technoxian Bot</p>
           </div>
           <div class="button">Learn More</div>
         </div>
-
-
-
-
-
-
-
-
 
         <div class="item" id="60">
           <img src="images/projects/img60.jpg">
@@ -791,7 +790,7 @@
         <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
       </div>
     </div>
-      <p>&copy; 2021 Robotics and Circuits</p>
+      <p>&copy; 2024 Robotics and Circuits</p>
     </footer>
 
   <div class="mahe">
@@ -800,6 +799,8 @@
   </div>
 
   <section class="name">
+    <p>Maintained by Coding Team RnC</p>
+    <P>Last updated- 05-06-2024</P>
     <p> Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by Titiksha Wagh</p>
   </section>
 
