--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
             <li><a href="index.html#about_us">About Us</a></li>
             <li><a href="index.html#our_work">Our Work</a></li>
             <li><a href="index.html#ongoing">Ongoing Activities</a></li>
-            <li><a href="vedanthcs.html">Vedanth</a></li>
+            <li><a href="coming_soon.html">Vedanth</a></li>
             <li class="dropdown">
               <a href="#team" class="active">Team</a>
               <div class="dropdown-content">
@@ -263,6 +263,15 @@
 
   <!--END ADVISORY BOARD-->>
 
+
+  <section class="img_container">
+    <div class="title textcenter">
+      <h1>Team - 2024</h1>
+    </div>
+    <img src="images/team/2023-24/full_team.jpg" alt="Team 2024"" class="team_img">
+    
+  </section>
+
   <section class="others">
     <div class="title textcenter">
       <h1>Team Members</h1>
@@ -332,7 +341,7 @@
         <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
       </div>
     </div>
-      <p>&copy; 2021 Robotics and Circuits</p>
+      <p>&copy; 2024 Robotics and Circuits</p>
     </footer>
 
   <div class="mahe">
@@ -341,6 +350,8 @@
   </div>
 
   <section class="name">
+    <p>Maintained by Coding Team RnC</p>
+    <P>Last updated- 05-06-2024</P>
     <p>Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by Titiksha Wagh</p>
   </section>
   <!--end footer-->
