Project Gallery Update

--- a/project_gallery.html
+++ b/project_gallery.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RNC Project Gallery</title>
-  <link rel="icon" href="images/logo/hlogo.png" type="image">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="stylesheet" href="css/responsive.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>RNC Project Gallery</title>
+        <link rel="icon" href="images/logo/hlogo.png" type="image">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
+        <link rel="stylesheet" href="css/responsive.css">
+
 </head>
-
 <body>
-
-  <!--start header-->
+    <!--start header-->
   <header>
     <div class="container">
       <div class="row">
@@ -127,6 +125,71 @@
             Read More
           </div>
         </div>
+
+        <div class="item" id="20251">
+          <h2 class="animated bounceInLeft delay-4s">
+            <pre> </pre>Touchless Pad
+          </h2>
+          <p> </p>
+          <img width="560" height="315" src="images/projects/touchlesspad.png" frameborder="0">
+          <p class=" vp animated bounceInLeft delay-4s">Vedanth 13.0</p>
+          <div class="vbutton animated bounceIn delay-5s">
+            Read More
+          </div>
+        </div>
+
+        <div class="item" id="20252">
+          <h2 class="animated bounceInLeft delay-4s">
+            <pre> </pre>Soldering Station
+          </h2>
+          <p> </p>
+          <img width="560" height="315" src="images/projects/solderingstation.png" frameborder="0">
+          <p class=" vp animated bounceInLeft delay-4s">Vedanth 13.0</p>
+          <div class="vbutton animated bounceIn delay-5s">
+            Read More
+          </div>
+        </div>
+
+
+        <div class="item" id="20253">
+          <h2 class="animated bounceInLeft delay-4s">
+            <pre> </pre>Small Bot
+          </h2>
+          <p> </p>
+          <img width="560" height="315" src="images/projects/smallbot.png" frameborder="0">
+          <p class=" vp animated bounceInLeft delay-4s">Vedanth 13.0</p>
+          <div class="vbutton animated bounceIn delay-5s">
+            Read More
+          </div>
+        </div>
+
+        <div class="item" id="20254">
+          <h2 class="animated bounceInLeft delay-4s">
+            <pre> </pre>Autonomous Wall Painting Bot
+          </h2>
+          <p> </p>
+          <img width="560" height="315" src="images/projects/wallpaintingbot.png" frameborder="0">
+          <p class=" vp animated bounceInLeft delay-4s">Vedanth 13.0</p>
+          <div class="vbutton animated bounceIn delay-5s">
+            Read More
+          </div>
+        </div>
+
+        <div class="item" id="20255">
+          <h2 class="animated bounceInLeft delay-4s">
+            <pre> </pre>Volume Finder Bot
+          </h2>
+          <p> </p>
+          <img width="560" height="315" src="images/projects/volumefinder.png" frameborder="0">
+          <p class=" vp animated bounceInLeft delay-4s">Vedanth 13.0</p>
+          <div class="vbutton animated bounceIn delay-5s">
+            Read More
+          </div>
+        </div>
+
+
+
+        
 
       </div>
     </div>
@@ -806,11 +869,10 @@
 
 
   <a href="#top" class="to_top">
-    <i class="fa fa-angle-double-up"></i>
+    <i class="fa fa-angle-double-up"></i>       
   </a>
   <!--end footer-->
   <script src="js/script.js"></script>
   <script src="js/modal.js"></script>
 </body>
-
 </html>
